-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.2
-
None
-
453e6e134510bdae8fe68519a4d42120ae21a53b
While compiling Qt 4.8.2 for Windows CE 5.0 I got the following warnings:
/src/declarative/util/qdeclarativestateoperations_p.h(116) : warning C4003: not enough actual parameters for macro 'rewind'
src/declarative/util/qdeclarativestateoperations_p.h(283) : warning C4003: not enough actual parameters for macro 'rewind'
It does not produce a compilation error, but it causes memory leaks
at runtime and/or memory is not released, this in the end cause program termination when available ram goes too low.
I fixed it in my sources by adding the following conditional undef
before the object declarations in qdeclarativestateoperations_p.h :
#ifdef Q_OS_WINCE
- undef rewind
#endif
It's basically the same thing done to fix bug #QTBUG-14399, but this time
applied to qdeclarativestateoperations_p.h
Before applying this fix, when running under Windows CE there were problems with memory allocated by QML objects and never released, I tried hard but I couldn't track the source of the issue, but after adding that #undef most of those issue vanished.
For Gerrit Dashboard: QTBUG-26227 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
29302,1 | rewind macro in WinCE wrongly substituted. | 4.8 | qt/qt | Status: MERGED | +2 | 0 |