rewind macro in WinCE wrongly substituted.

qdeclarativestateoperations_p.h gets wrong macro substitution by
rewind(fp) macro when compiling for Windows CE

Task-number: QTBUG-26227
Change-Id: I228ab17ee0be0e228d0c782bfb48ad5c8b12169f
Reviewed-by: Bea Lam <bea.lam@nokia.com>