src/declarative/util/qdeclarativestateoperations_p.h
@@ -54,6 +54,14 @@ QT_BEGIN_NAMESPACE
 
 QT_MODULE(Declarative)
 
+#ifdef Q_OS_WINCE
+// qgraphicsitem.h includes qfunctions_wince.h.
+// qfunctions_wince.h defines a missing posix rewind for WinCE,
+// but this conflicts with rewind method defined in this class.
+// As a workaround we undefine WinCE posix replacement for rewind here.
+# undef rewind
+#endif
+
 class QDeclarativeParentChangePrivate;
 class Q_DECLARATIVE_PRIVATE_EXPORT QDeclarativeParentChange : public QDeclarativeStateOperation, public QDeclarativeActionEvent
 {
